--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ allow 	192.168.3.10;
 allow 	192.168.3.11;
 allow 	192.168.3.12;
 allow 	192.168.3.13;
+allow   192.168.3.14;
 deny all;
 
 rewrite "^(.*)/_images/([0-9a-f]{2})([0-9a-f]{2})([0-9a-f]{28}).*$" /$1/images/$2/$2$3$4 break;
